# find-asteroids

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
docs/notebooks/: catalog.ecsv  psfs.ecsv  search.ipynb
src/find_asteroids/: directions.py  postprocess.py  search.py
